--- a/flutter_local_notifications/pubspec.yaml
+++ b/flutter_local_notifications/pubspec.yaml
@@ -5,14 +5,18 @@ description: A cross platform plugin for displaying and scheduling local
 version: 19.0.0-dev.6
 homepage: https://github.com/MaikuB/flutter_local_notifications/tree/master/flutter_local_notifications
 issue_tracker: https://github.com/MaikuB/flutter_local_notifications/issues
+publish_to: none
 
 dependencies:
   clock: ^1.1.0
   flutter:
     sdk: flutter
-  flutter_local_notifications_linux: ^6.0.0-dev.1
-  flutter_local_notifications_windows: ^1.0.0-dev.4
-  flutter_local_notifications_platform_interface: ^9.0.0-dev.1
+  flutter_local_notifications_linux:
+    path: '../flutter_local_notifications_linux'
+  flutter_local_notifications_windows:
+    path: '../flutter_local_notifications_windows'
+  flutter_local_notifications_platform_interface:
+    path: '../flutter_local_notifications_platform_interface'
   timezone: ^0.10.0
 
 dev_dependencies:
